--- a/css/scss/helpers/_mixins.scss
+++ b/css/scss/helpers/_mixins.scss
@@ -44,3 +44,11 @@
       box-shadow: 0 0 0 0 rgba(255,255,255,0);
     }
   }
+
+@mixin prefixer($property,$value,$prefixes:()){
+  @each $prefix in $prefixes {
+    #{'-'+$prefix+'-' + $property}:$value;
+  }
+  #{$property}: $value
+}
+
