--- a/css/scss/helpers/_globals.scss
+++ b/css/scss/helpers/_globals.scss
@@ -30,7 +30,7 @@ html {
     --black-100: #f7f7f7;
     --black-200: #ececec;
     --black-000: #fff;
-    --black-alpha: rgba(0,0,0,0.05)
+    --black-alpha: rgba(255,255,255,.05)
 }
 
 body {
@@ -41,6 +41,28 @@ body {
     overflow-x: hidden;
     background-color: #fff;
     line-height: 1.5;
+}
+body::-webkit-scrollbar {
+    width: 13px;
+}
+body::-webkit-scrollbar-track {
+    background-color: #eeeeeeba
+}
+body::-webkit-scrollbar-thumb {
+    background-color: var(--main-color);
+    border-radius: 15px;
+    border: 2px solid rgb(228, 194, 107);
+}
+.dark {
+    background-color: var(--dark-bg);
+    --black-100: var(--dark-bg);
+    --black-000: var(--dark-bg);
+    --main-to-dark-color: var(--dark-bg);
+    --dark-to-main-color: var(--main-color);
+    --shadow-black-100: var(--shadow-black-300);
+    --black-alpha: rgba(0,0,0,0.05);
+    --black-900: #fff;
+    --black-400: #bbb;
 }
 
 ul {
@@ -94,5 +116,43 @@ button.owl-dot{
     border-radius: 5px;
     &.active {
         background-color: var(--main-color);
+    }
+}
+.toggle-theme {
+    position: fixed;
+    right: 5px;
+    top: 50%;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    background-color: var(--dark-to-main-color);
+    color: #fff;
+    box-shadow: var(--shadow-black-300);
+    z-index: 1200;
+    text-align: center;
+    font-size: 16px;
+    i {
+        line-height:38px;
+        cursor: pointer;
+    }
+
+}
+.preloader {
+    position: fixed;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2100;
+    background-color: var(--main-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    span {
+        display: block;
+        height: 60px;
+        width: 60px;
+        background-color: var(--dark-to-main-color);
+        border-radius: 50%;
+        animation: zoomInOut_01 1s ease infinite;
     }
 }
