--- a/css/scss/helpers/_mixins.scss
+++ b/css/scss/helpers/_mixins.scss
@@ -44,6 +44,15 @@
       box-shadow: 0 0 0 0 rgba(255,255,255,0);
     }
   }
+  @keyframes zoomInOut_01 {
+    0% {
+      transform: scale(0);
+    }
+    100%{
+      transform: scale(1);
+      opacity: 0;
+    }
+  }
 
 @mixin prefixer($property,$value,$prefixes:()){
   @each $prefix in $prefixes {
